Added in that entries will not be shown if already changed.

--- a/Kapitel/04_Admin_Panel/02_Aufbau/03_Alias_Vorschläge/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/03_Alias_Vorschläge/main.tex
@@ -120,6 +120,7 @@ Wird über ein Aktions- oder ein Sortierungselement gehovert oder auf ein solche
 Wird nicht mehr über das Element gehovert oder wurde etwas anderes angeklickt, so wird die Hintergrundfarbe auf den originalen Wert gesetzt.
 
 Wird auf ein Aktionselement eines zugehörigen Alias-Vorschlags geklickt, so wird die entsprechende Aktion ausgeführt.
+Befindet sich ein Alias-Vorschlag in den Änderungen, so wird dieser nicht angezeigt.
 
 \paragraph*{Initialer Zustand}
 Die Alias-Vorschläge sind absteigend nach dem Gebäude sortiert.
