--- a/Kapitel/04_Admin_Panel/02_Aufbau/04_Offizielle_Aliasse/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/04_Offizielle_Aliasse/main.tex
@@ -102,7 +102,8 @@ Ist \dq Absteigend \dq{} ausgewählt, so werden die offiziellen Aliasse nach der
 Wird über ein Aktions- oder ein Sortierungselement gehovert oder auf ein solches geklickt, so ändert sich die Hintergrundfarbe auf eine hellere Abwandlung der vorherigen Hintergrundfarbe.
 Wird nicht mehr über das Element gehovert oder wurde etwas anderes angeklickt, so wird die Hintergrundfarbe auf den originalen Wert gesetzt.
 
-Wird auf ein Aktionselement eines zugehörigen Alias-Vorschlags geklickt, so wird die entsprechende Aktion ausgeführt.
+Wird auf ein Aktionselement eines zugehörigen offiziellen Aliasses geklickt, so wird die entsprechende Aktion ausgeführt.
+Befindet sich ein offizieller Alias in den Änderungen, so wird dieser nicht angezeigt.
 
 \paragraph*{Initialer Zustand}
 Die offiziellen Aliasse sind absteigend nach dem Gebäude sortiert.
