Fixed typo in IMapObjectInfoController

--- a/Kapitel/02_App/03_Map/02_ViewModel/IMapObjectInfoController/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/IMapObjectInfoController/main.tex
@@ -81,7 +81,7 @@ die vom Benutzer noch bewertet werden dürfen.
 \paragraph*{Rückgabewert}
 LiveData<List<String>>, Liste der Alias-Vorschläge.
 
-\subsubsection*{\texttt{+ giveAliasFeefback(mapId : int, suggestion : String, feedback : SuggestionFeedback) : boolean}}%$$$M
+\subsubsection*{\texttt{+ giveAliasFeedback(mapId : int, suggestion : String, feedback : SuggestionFeedback) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Diese Methode sorgt dafür, dass Feedback zu einem Alias-Vorschlag gesendet wird.
 \paragraph*{Beschreibung}
