Add javadoc for method 'deleteByName_String_boolean'
Fix method name to 'deleteByNameAndID_String,int_boolean'
and add javadoc for method
'Kapitel/00_Backend/Repositories/AliasSuggestionRepository/
deleteByName_String_boolean' in '/main.tex'
(in the same above mentioned path).

--- a/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/deleteByName_String_boolean/main.tex
+++ b/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/deleteByName_String_boolean/main.tex
@@ -1,19 +1,16 @@
-\paragraph{\texttt{deleteByNameAndID(aliasSuggestion : String, mapID : int) : boolean}}%$$$M
+\paragraph{\texttt{deleteByName(aliasSuggestion : String) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Entfernt einen Alias-Vorschlag von der Datenbank der Alias-Vorschläge.
+Entfernt alle Alias-Vorschläge, die genau aus der übergebenen Zeichenkette zusammengesetzt sind, von der Datenbank der Alias-Vorschläge.
 \paragraph*{Beschreibung}
 Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
 Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Services} aufgerufen.
-Die Methode ermöglicht, dass ein bestimmter Alias-Vorschlag durch Angabe der entsprechenden Zeichenkette und der ID des dazugehörigen Kartenobjekts entfernt werden kann.
-Hierfür wird der Alias als Zeichenkette und die ID des dazugehörigen Kartenobjekts übergeben.
+Die Methode ermöglicht, dass alle Alias-Vorschläge, die genau aus der übergebenen Zeichenkette zusammengesetzt sind, aus der Datenbank der Alias-Vorschläge entfernt werden können.
+Hierfür wird die gewünschte Zeichenkette übergeben.
 \paragraph*{Parameter}
 \begin{itemize}
     \item aliasSuggestion : String
     		\paragraph*{Beschreibung}
-    		Der als Zeichenkette angegebene Alias.
-    	\item mapID : int
-    		\paragraph*{Beschreibung}
-    		Die ID des Kartenobjekts, für das der übergebene Alias-Vorschlag als Bezeichner dienen soll.
+    		Die Zeichenkette.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Wahr, wenn der übergebene Alias-Vorschlag aus der Datenbank der Alias-Vorschläge entfernt werden konnte oder wenn der Alias-Vorschlag bereits nicht in der Datenbank hinterlegt war, ansonsten falsch.
+Wahr, wenn alle Alias-Vorschläge, die genau aus der übergebenen Zeichenkette zusammengesetzt sind, von der Datenbank der Alias-Vorschläge erfolgreich entfernt werden konnten, ansonsten falsch.
