--- a/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/main.tex
+++ b/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/main.tex
@@ -1,5 +1,6 @@
 \subsection{AliasSuggestionRepository}
 
 \inprelmod{Beschreibung}
+\inprelmod{deleteByNameAndID_String,int_boolean}
 \inprelmod{deleteByName_String_boolean}
 \inprelmod{findByNegVotes_int_ListAliasSuggestion}
