--- a/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/main.tex
+++ b/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/main.tex
@@ -4,3 +4,4 @@
 \inprelmod{deleteByNameAndID_String,int_boolean}
 \inprelmod{deleteByName_String_boolean}
 \inprelmod{findByNegVotes_int_ListAliasSuggestion}
+\inprelmod{findByPosVotes_int_ListAliasSuggestion}
