Added concrete MapObjectInfoController class

--- a/Kapitel/02_App/03_Map/02_ViewModel/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/main.tex
@@ -11,3 +11,4 @@
 \inprelmod{MapController}
 \inprelmod{BuildingModeController}
 \inprelmod{LevelModeController}
+\inprelmod{MapObjectInfoController}
