--- a/Kapitel/02_App/03_Map/03_Model/main.tex
+++ b/Kapitel/02_App/03_Map/03_Model/main.tex
@@ -1,4 +1,5 @@
 \subsection{Model}
 
 \inprelmod{Klassendiagramm}
-\inprelmod{MapDataProvider}
+\inprelmod{IMapDataIProvider}
+%\inprelmod{MapDataProvider}
