Add javadoc for method 'updateVotes_String,int,boolean_boolean'
Add javadoc for method
'Kapitel/00_Backend/Repositories/AliasSuggestionRepository/
updateVotes_String,int,boolean_boolean' in '/main.tex'
(in the same above mentioned path).

--- a/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/main.tex
+++ b/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/main.tex
@@ -5,3 +5,4 @@
 \inprelmod{deleteByName_String_boolean}
 \inprelmod{findByNegVotes_int_ListAliasSuggestion}
 \inprelmod{findByPosVotes_int_ListAliasSuggestion}
+\inprelmod{updateVotes_String,int,boolean_boolean}
