Add javadoc for method 'addVoter_String,String,int_boolean'
Add javadoc for method
'Kapitel/00_Backend/Repositories/AliasSuggestionRepository/
addVoter_String,String,int_boolean' in '/main.tex'
(in the same above mentioned path).

--- a/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/main.tex
+++ b/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/main.tex
@@ -6,3 +6,4 @@
 \inprelmod{findByNegVotes_int_ListAliasSuggestion}
 \inprelmod{findByPosVotes_int_ListAliasSuggestion}
 \inprelmod{updateVotes_String,int,boolean_boolean}
+\inprelmod{addVoter_String,String,int_boolean}
