Created MapDataProvider class

--- a/Kapitel/02_App/03_Map/03_Model/IMapDataProvider/main.tex
+++ b/Kapitel/02_App/03_Map/03_Model/IMapDataProvider/main.tex
@@ -3,6 +3,7 @@
 Interface.
 \paragraph*{Beschreibung}
 Dieses Interface beschreibt die Schnittstelle von Model um Kartendaten anzufordern und zu speichern.
+Dieses Interface ist eine Fassade für die Model-Schicht der Karte.
 
 \subsubsection*{\texttt{+ getRoomDisplayData(mapId : int, level : int) : LiveData<List<DisplayData>>}}%$$$M
 \paragraph*{Kurzbeschreibung}
