Added in Architektur and class Framework. Adjusted public interface accordingly.

--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/05_getInstance/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/05_getInstance/main.tex
@@ -1,10 +1,10 @@
-\paragraph{\texttt{+ static getInstance() : Backend}}%$$$M
+\paragraph{\texttt{+ static getInstance() : Framework}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Gibt die aktuelle \verb#Backend#-Instanz zurück.
+Gibt die aktuelle \verb#Framework#-Instanz zurück.
 \paragraph*{Beschreibung}
-Gibt die aktuelle \verb#Backend#-Instanz zurück.
+Gibt die aktuelle \verb#Framework#-Instanz zurück.
 Existiert noch keine Instanz, wird eine neue erstellt und diese zurückgegeben.
 \paragraph*{Parameter}
 keine
 \paragraph*{Rückgabewert}
-\verb#Backend#-Instanz
+\verb#Framework#-Instanz
