--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/06_constructor/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/06_constructor/main.tex
@@ -1,10 +1,10 @@
 \paragraph{\texttt{- <<create>> constructor()}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Erzeuge eine Changes-Instanz.
+Erzeuge eine Framework-Instanz.
 \paragraph*{Beschreibung}
-Erzeuge eine Changes-Instanz.
-Diese Methode wird nur durch die \verb#Changes::getInstance# Methode aufgerufen.
+Erzeuge eine Framework-Instanz.
+Diese Methode wird nur durch die \verb#Framework::getInstance# Methode aufgerufen.
 \paragraph*{Parameter}
 Keine
 \paragraph*{Rückgabewert}
-Keiner
+Void.
