Adjusted classes accordingly to new Framework.

--- a/Kapitel/04_Admin_Panel/04_Klassen/02_Change/00_Beschreibung/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/02_Change/00_Beschreibung/main.tex
@@ -1,2 +1,3 @@
 Das Interface \verb#Change# beschreibt die benötigten Schnittstellen für Änderungen.
 Das Interface besteht aus einer Methode \verb#perform#.
+Das Interface ermöglicht das Entwurfsmuster Strategie für das Verhalten der einzelnen Änderungen.
