Added in Framework

--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/04_Changes/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/04_Changes/main.tex
@@ -3,4 +3,4 @@
 \inprelmod{01_addChange}
 \inprelmod{02_performChange}
 \inprelmod{03_removeChange}
-\inprelmod{04_getChangeData}
+\inprelmod{04_getChanges}
