Added map/model classes

--- a/Kapitel/02_App/03_Map/03_Model/main.tex
+++ b/Kapitel/02_App/03_Map/03_Model/main.tex
@@ -3,3 +3,7 @@
 \inprelmod{Klassendiagramm}
 \inprelmod{IMapDataProvider}
 \inprelmod{MapDataProvider}
+\inprelmod{TileSourceProvider}
+\inprelmod{DisplayDataProvider}
+\inprelmod{MapObjectInformationProvider}
+\inprelmod{PositionDataManager}
