--- a/Kapitel/02_App/03_Map/03_Model/MapDataProvider/main.tex
+++ b/Kapitel/02_App/03_Map/03_Model/MapDataProvider/main.tex
@@ -2,7 +2,7 @@
 \paragraph*{Typ}
 Implementiert IMapDataProvider.
 \paragraph*{Beschreibung}
-Diese Klasse ist implementiert die Fassade IMapDataProvider für die Model-Schicht der Karte.\\
+Diese Klasse implementiert die Fassade IMapDataProvider für die Model-Schicht der Karte.\\
 Ein MapDataProvider besitzt eine Instanz der Klassen 
 TileSourceProvider, DisplayDataProvider, MapObjectInformationProvider, PositionDataManager.
 
