--- a/Kapitel/02_App/03_Map/03_Model/MapDataProvider/main.tex
+++ b/Kapitel/02_App/03_Map/03_Model/MapDataProvider/main.tex
@@ -6,7 +6,7 @@ Diese Klasse implementiert die Fassade IMapDataProvider für die Model-Schicht d
 Ein MapDataProvider besitzt eine Instanz der Klassen 
 TileSourceProvider, DisplayDataProvider, MapObjectInformationProvider, PositionDataManager.
 
-\paragraph*{Methoden, die an delegiert TileSourceProvider werden}
+\paragraph*{Methoden, die an TileSourceProvider delegiert werden}
 \begin{itemize}
     \item \texttt{+ getFloorMapTileSource(mapId : int, level : int) : \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}{ITileSource}}
     \item \texttt{+ getBuildingTileSource() : \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}{ITileSource}}
