Fixed requested changes

--- a/Kapitel/04_Admin_Panel/00_Schichtenmodell/main.tex
+++ b/Kapitel/04_Admin_Panel/00_Schichtenmodell/main.tex
@@ -12,4 +12,4 @@ Dieser besteht aus den Klassen Framework, AuthManager und Backend. Framework ist
 
 \paragraph*{Model}
 Die letzte Schicht ist das Model. Dieses stellt den Zugriff auf die Daten sicher.
-Das Model besteht aus den Klassen Changes, ChangeAction und Alias sowie dem Interface Changes.
+Das Model besteht aus den Klassen Changes, ChangeAction und Alias sowie dem Interface Change.
