--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/03_Auth/03_configure/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/03_Auth/03_configure/main.tex
@@ -1,8 +1,8 @@
 \paragraph{\texttt{+ configure(settings: UserManagerSettings)}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Ermöglicht die Konfiguration des AuthManager für einen OIDC-Provider.
+Ermöglicht die Konfiguration des AuthManagers für einen OIDC-Provider.
 \paragraph*{Beschreibung}
-Ermöglicht die Konfiguration des AuthManager für einen OIDC-Provider.
+Ermöglicht die Konfiguration des AuthManagers für einen OIDC-Provider.
 Hierfür wird die UserManagerSettings-Klasse \footnote{href{https://github.com/IdentityModel/oidc-client-js/blob/dev/src/UserManagerSettings.js}{https://github.com/IdentityModel/oidc-client-js/blob/dev/src/UserManagerSettings.js}} von 
 OIDC-Client-JS \footnote{\href{https://github.com/IdentityModel/oidc-client-js}{https://github.com/IdentityModel/oidc-client-js}} verwendet.
 Mögliche Einstellungen können dem Wiki \footnote{\href{https://github.com/IdentityModel/oidc-client-js/wiki\#configuration}{https://github.com/IdentityModel/oidc-client-js/wiki\#configuration}} entnommen werden.
