--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/04_Changes/01_addChange/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/04_Changes/01_addChange/main.tex
@@ -6,7 +6,7 @@ Dabei wird eine Instanz von \verb#ChangeAction# erzeugt und der aktuelle Zeitpun
 \begin{itemize}
     \item change: Change = Instanz des Interfaces \verb#Change#, die die Änderung durchführt.
     \item metadata: JSON = JSON mit darzustellenden Informationen.
-    \item category: String = Die Kategorie der Änderung.
+    \item category: String = Kategorie der Änderung.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Wahr, wenn erfolgreich, Falsch sonst
+Wahr, wenn erfolgreich, falsch sonst
