--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/04_Changes/02_performChange/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/04_Changes/02_performChange/main.tex
@@ -5,7 +5,7 @@ Dabei wird die entsprechende Änderung entfernt.
 \paragraph*{Parameter}
 \begin{itemize}
     \item metadata: JSON = Metadaten der entsprechenden Änderungen.
-    \item category: String = Die Kategorie der entsprechenden Änderung.
+    \item category: String = Kategorie der entsprechenden Änderung.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Wahr, wenn erfolgreich, Falsch sonst
