--- a/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/04_Changes/03_removeChange/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/07_Framework/04_Changes/03_removeChange/main.tex
@@ -4,7 +4,7 @@ Entferne die entsprechende Änderung.
 \paragraph*{Parameter}
 \begin{itemize}
     \item metadata: JSON = Metadaten der entsprechenden Änderungen.
-    \item category: String = Die Kategorie der Änderung.
+    \item category: String = Kategorie der Änderung.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Wahr, wenn erfolgreich, Falsch sonst
+Wahr, wenn erfolgreich, falsch sonst
