added security descriptions

--- a/Kapitel/00_Backend/main.tex
+++ b/Kapitel/00_Backend/main.tex
@@ -6,5 +6,9 @@
 %    \relmermaid[width=13cm]{Klassendiagramm1}
 %\end{figure}
 
+\inprelmod{Beschreibung}
 \inprelmod{Resolvers}
 \inprelmod{Services}
+\inprelmod{Repositories}
+\inprelmod{Models}
+\inprelmod{Security}
