made it compile

--- a/Kapitel/00_Backend/Models/Alias/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Models/Alias/Beschreibung/main.tex
@@ -17,3 +17,4 @@
     \item version : int
             \paragraph{Beschreibung}               
             MapId mittels der das Kartenobjekt, auf das der Alias bezogen ist, eindeutig identifiziert ist.   
+\end{itemize}            
