--- a/Kapitel/00_Backend/Models/AliasSuggestion/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Models/AliasSuggestion/Beschreibung/main.tex
@@ -24,3 +24,4 @@
     \item votedUsers : List<user : String>
             \paragraph{Beschreibung}        
             List der eindeutigen Kennzeichner aller Nutzer, die diesen Vorschlag bewertet oder erstellt haben.
+\end{itemize}            
