--- a/Kapitel/00_Backend/Models/MapID/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Models/MapID/Beschreibung/main.tex
@@ -11,3 +11,4 @@
     \item name : String
             \paragraph{Beschreibung}
             Bezeichner des Kartenobjektes, welches durch die MapID repräsentiert wird.
+\end{itemize}            
