--- a/Kapitel/00_Backend/Models/User/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Models/User/Beschreibung/main.tex
@@ -13,3 +13,4 @@ Repräsentiert eindeutig einen registrierten Nutzer mit seinen jeweiligen Berech
             \paragraph{Beschreibung}               
             Sammlung aller Berechtigungen(Rollen), die dem Nutzer gewährt worden sind. Insbesondere ist hier zwischen
             \dq Nutzer \dq und \dq Admin \dq zu unterscheiden.
+\end{itemize}            
