--- a/Kapitel/02_App/07_Settings/Klassen/ISettingsModel/main.tex
+++ b/Kapitel/02_App/07_Settings/Klassen/ISettingsModel/main.tex
@@ -1,22 +1,22 @@
-\subsubsection{ISettingsController}
+\subsubsection{ISettingsModel}
 \paragraph*{Typ}
 Interface.
 \paragraph*{Beschreibung}
-Dieses Interface bietet eine Schnittstelle für die Verwaltung der Einstellungen.
+Dieses Interface bietet eine Schnittstelle für die Durchführung von Änderungen an den Einstellungen der App.
 
 \subsubsection*{\texttt{+ setLanguage(language : String)}}%$$$M
 \paragraph*{Beschreibung}
-Prüft, ob die Sprache ein Wert aus getSupportedLanguages() ist und wenn ja, veranlasst die Umstellung der App in die Sprache.
+Stellt die Sprache der App auf die gegebene Sprache um.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item language : String = die Sprache, in der die App angezeigt werden soll
+    \item language : String = die Sprache, in der die App angezeigt werden soll.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
 
 \subsubsection*{\texttt{+ setTheme(theme : Theme)}}%$$$M
 \paragraph*{Beschreibung}
-Veranlasst die Umstellung der App auf ein Theme.
+Stellt die App auf ein gegebenes Theme um.
 \paragraph*{Parameter}
 \begin{itemize}
     \item theme : Theme = das Theme, in dem die App angezeigt werden soll.
@@ -26,7 +26,7 @@ Void.
 
 \subsubsection*{\texttt{+ deleteSearchHistory()}}%$$$M
 \paragraph*{Beschreibung}
-Veranlasst die Löschung des Suchverlaufs.
+Löscht den Suchverlaufs.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
@@ -34,7 +34,7 @@ Void.
 
 \subsubsection*{\texttt{+ setStoreSearchHistory(value : boolean)}}%$$$M
 \paragraph*{Beschreibung}
-Veranlasst die Änderung der Speicherung des Suchverlaufs abhängig vom gegebenen Wert.
+Setzt den Wert für die Speicherung des Suchverlaufs.
 \paragraph*{Parameter}
 \begin{itemize}
     \item value : boolean = Wert, ob der Suchverlauf gespeichert werden soll oder nicht
@@ -42,21 +42,21 @@ Veranlasst die Änderung der Speicherung des Suchverlaufs abhängig vom gegebene
 \paragraph*{Rückgabewert}
 Void.
 
-\subsubsection*{\texttt{+ getLanguage() : LiveData<String>}}%$$$M
+\subsubsection*{\texttt{+ getLanguageIdentifier() : LiveData<String>}}%$$$M
 \paragraph*{Beschreibung}
-Gibt den Namen der ausgewählten Sprache in dieser Sprache zurück.
+Gibt den ISO-639-1-Code der ausgewählten Sprache zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-LiveData<String>, Name der ausgewählten Sprache in dieser Sprache.
+LiveData<String>, ISO-639-1-Code der ausgewählten Sprache.
 
 \subsubsection*{\texttt{+ getSupportedLanguages() : LiveData<List<String>>}}%$$$M
 \paragraph*{Beschreibung}
-Gibt eine Liste der Namen der unterstützten Sprachen in den entsprechenden Sprachen zurück.
+Gibt eine Liste der ISO-639-1-Codes der unterstützten Sprachen zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-LiveData<List<String>>, Liste der Namen der unterstützten Sprachen in den entsprechenden Sprachen.
+LiveData<List<String>>, Liste der ISO-639-1-Codes der unterstützten Sprachen.
 
 \subsubsection*{\texttt{+ getTheme() : LiveData<Theme>}}%$$$M
 \paragraph*{Beschreibung}
@@ -68,16 +68,15 @@ LiveData<Theme>, aktuell ausgewähltes Theme.
 
 \subsubsection*{\texttt{+ getStoreSearchHistory() : LiveData<boolean>}}%$$$M
 \paragraph*{Beschreibung}
-Gibt zurück, ob der Suchverlauf gespeichert werden soll (true) oder nicht (false).
+Gibt zurück, ob der Suchverlauf gespeichert wird.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-LiveData<boolean>, ob der Suchverlauf gespeichert werden soll (true) oder nicht (false).
+LiveData<boolean>, ob der Suchverlauf gespeichert wird (true) oder nicht (false).
 
 %----------------------------------------------------------
-\subsubsection{SettingsController}
+\subsubsection{SettingsModel}
 \paragraph*{Typ}
-Implementiert ISettingsController.
+Implementiert ISettingsModel.
 \paragraph*{Beschreibung}
-Diese Klasse dient der Verwaltung der Einstellungen im ViewModel. \\
-Zur Durchführung der Änderungen an den Einstellungen und zum Erhalt der Daten benutzt der SettingsController ein ISettingsModel.
+Diese Klasse dient der Durchführung von Änderungen an den Einstellungen der App.
