--- a/Kapitel/00_Backend/Security/JWTFilter/doFilterInternal()/main.tex
+++ b/Kapitel/00_Backend/Security/JWTFilter/doFilterInternal()/main.tex
@@ -1,8 +1,8 @@
 \paragraph{\texttt{doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Führt den Filter aus. Hierbei wird ggf. anhand des Access-Tokens authorisierung bzw. Authentifizierung vorgenommen.
+Führt den Filter aus. Hierbei wird ggf. anhand des Access-Tokens Authorisierung bzw. Authentifizierung vorgenommen.
 \paragraph*{Beschreibung}
-Zunächst wird ggf der Token dem Header des Http-Requests entnommen. Dieser wird anschließend mithilfe des in
+Zunächst wird ggf. der Token dem Header des Http-Requests entnommen. Dieser wird anschließend mithilfe des in
 \dq SecurityConfig \dq definierten Verifiers validiert. Ist er gültig, so wird zunächst der Nutzeridentifikator dem Token entnommen und mittels der \dq loadByToken \dq Methode 
 des UserService der entsprechende User geladen. Ist dieser noch nicht vorhanden, so muss dieser mitt der \dq addUser \dq Methode
 zuerst hinzugefügt und dann erneut geladen werden. Anschließend werden die Authorisierungen des Users einem \dq 
@@ -22,6 +22,6 @@ so
     \item FilterChain
     		\paragraph*{Beschreibung}
             Klasse, die dafür sorgt, dass alle vorangeschaaltenen Filter in einer festen Reihenfolge ausgeführt werden. Da es in diesem Entwurf nur einen Filter gibt,
-            sorgt dieser nur dementsprechend nur für die Ausführung des einen Filters und der Request wird nach dessen Ausführung direkt (an die GraphQL-Schnittstelle) weitergeleitet.
+            sorgt dieser dementsprechend nur für die Ausführung des einen Filters und der Request wird nach dessen Ausführung direkt (an die GraphQL-Schnittstelle) weitergeleitet.
 
 \end{itemize}
