--- a/Kapitel/00_Backend/Security/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Security/Beschreibung/main.tex
@@ -1,12 +1,12 @@
 \subsection{Paketbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
-Beinhaltet alles Klassen und Konfigurationen, die zur Authentifizierung und Authorisierung des Nutzers nötig sind.
+Beinhaltet alle Klassen und Konfigurationen, die zur Authentifizierung und Authorisierung des Nutzers nötig sind.
 \paragraph*{Beschreibung}
 Bestimmte Methoden auf Resolverebene sollen nur angemeldeten Nutzern oder teilweise auch nur Nutzern, die bestimmte Authorisierungen
 innehaben, zugänglich sein. Um dies mittels Spring-Security zu realisieren wird in \dq WebSecurityConfig \dq spezifiziert, dass mittels eines vorangeschaltenen Filters vor jedem
 Methodenaufruf der Header des zu bearbeitenden Http-Requests auf ein Access-Token überprüft werden soll. Ist ein valider Token enthalten, 
-wird diesem die Nutzeridentifikation entnommen und mittels dieser die Nutzerauthoritäten aus der gepeicherten User-Entity
-zu entnehmen und in ein JWTPreAuthenticationToken gewrapped in den Security-Kontext abgelegt. Dadurch kann vor der Methodenausführung
+wird diesem die Nutzeridentifikation entnommen. Mit diesem eindeutigen KKennzeichner wird die entsprechende User-Entitys
+wenn noch nicht vorhanden erstellt und geladen. Dieser werden dann  die Nutzerauthoritäten entnommen und in ein JWTPreAuthenticationToken gewrapped in den Security-Kontext abgelegt. Dadurch kann vor der Methodenausführung
 im Resolver überprüft werden, ob der Security-Context die benötigte Authorität enthält.
 
 \paragraph*{Enthaltene Klasse}
