Changed as requested.

--- a/Kapitel/02_App/07_Settings/Klassen/ISettingsModel/main.tex
+++ b/Kapitel/02_App/07_Settings/Klassen/ISettingsModel/main.tex
@@ -9,7 +9,7 @@ Dieses Interface bietet eine Schnittstelle für die Durchführung von Änderunge
 Stellt die Sprache der App auf die gegebene Sprache um.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item language : String = die Sprache, in der die App angezeigt werden soll.
+    \item language : String = Sprache, in der die App angezeigt werden soll.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
@@ -19,7 +19,7 @@ Void.
 Stellt die App auf ein gegebenes Theme um.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item theme : Theme = das Theme, in dem die App angezeigt werden soll.
+    \item theme : Theme = Theme, in dem die App angezeigt werden soll.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
@@ -37,7 +37,7 @@ Void.
 Setzt den Wert für die Speicherung des Suchverlaufs.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item value : boolean = Wert, ob der Suchverlauf gespeichert werden soll oder nicht
+    \item value : boolean = Wert, ob der Suchverlauf gespeichert werden soll oder nicht.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
