Add javadoc for method 'findNewerThanVersion_int_ListAliasSuggestion,int'
Add javadoc for method
'Kapitel/00_Backend/Repositories/AliasSuggestionRepository/
findNewerThanVersion_int_ListAliasSuggestion,int'
in '/main.tex' (in the same above mentioned path).

--- a/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/main.tex
+++ b/Kapitel/00_Backend/Repositories/AliasSuggestionRepository/main.tex
@@ -7,3 +7,4 @@
 \inprelmod{findByPosVotes_int_ListAliasSuggestion}
 \inprelmod{updateVotes_String,int,boolean_boolean}
 \inprelmod{addVoter_String,String,int_boolean}
+\inprelmod{findNewerThanVersion_int_ListAliasSuggestion,int}
