--- a/Kapitel/00_Backend/Repositories/AliasRepository/findByName_String_boolean/main.tex
+++ b/Kapitel/00_Backend/Repositories/AliasRepository/findByName_String_boolean/main.tex
@@ -4,7 +4,7 @@ Gibt die ID eines in der Datenbank hinterlegten Aliasses zurück.
 \paragraph*{Beschreibung}
 Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
 Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Services} aufgerufen.
-Die Methode ermöglicht, dass die ID eines bestimmten Aliasses durch Angabe der entsprechenden Zeichenkette angefragt werden und zurückbekommen kann.
+Die Methode ermöglicht, dass die ID eines bestimmten Aliasses durch Angabe der entsprechenden Zeichenkette angefragt und zurückbekommen werden kann.
 Hierfür wird der Alias als Zeichenkette übergeben.
 \paragraph*{Parameter}
 \begin{itemize}
