allgemeine Beschreibung des Server-Backends

--- a/Kapitel/00_Backend/main.tex
+++ b/Kapitel/00_Backend/main.tex
@@ -6,6 +6,7 @@
 %    \relmermaid[width=13cm]{Klassendiagramm1}
 %\end{figure}
 
+\inprelmod{Beschreibung}
 \inprelmod{Resolvers}
 \inprelmod{Services}
 \inprelmod{Repositories}
