Changed subsection to section

--- a/Kapitel/05_CICD/01_Versionierung/main.tex
+++ b/Kapitel/05_CICD/01_Versionierung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Versionierung}
+\section{Versionierung}
 
 Im Rahmen dieses Projektes wird als Versionskontrollsystem das Werkzeug \verb#git# eingesetzt.
 \verb#git# ist ein langjährig bewährtes und erfolgreiches Versionskontrollsystem und ermöglicht das separieren eines Projektes in mehrere Unterprojekte.
