--- a/Kapitel/05_CICD/03_App/main.tex
+++ b/Kapitel/05_CICD/03_App/main.tex
@@ -1,4 +1,4 @@
-\subsection{App}
+\section{App}
 
 Die Entwicklung erfolgt auf einzelnen Zweigen, die in den \verb#main#-Zweig überführt werden, sobald diese fertig ausgearbeitet sind.
 Sobald der \verb#main#-Zweig aktualisiert wurde, wird die aktuelle Version der App gebaut und ausführlich getestet.
