--- a/Kapitel/02_App/04_AddAlias/Klassen/AddAliasScreen/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/AddAliasScreen/main.tex
@@ -4,7 +4,7 @@ Composable.
 \paragraph*{Beschreibung}
 Dieses Composable stellt eine grafische Benutzerschnittstelle bereit
 Mit dieser kann der Benutzer einen neuen Alias lokal hinzufügen oder global vorschlagen.\\
-Beim Erstellen eines AddAliasScreens durch die Navigation erhält dieser die Gebäude und ggf. Raumnummer 
+Beim Erstellen eines AddAliasScreens durch die Navigation erhält dieser die MapId 
 des ausgewählten Kartenobjekts, zu dem ein Alias erstellt werden soll (siehe Navigation).\\
 Für die Speicherung der neuen Aliasse bez. Alias-Vorschläge und den erhalt der Aliasse benutzt 
 der AddAliasScreen einen IAddAliasController.
@@ -19,6 +19,7 @@ der AddAliasScreen einen IAddAliasController.
     \item Darunter befindet sich ein Textfeld. Klickt der Benutzer auf dieses Textfeld, öffnet sich die Tastatur. 
     Der Benutzer kann einen Text in das Textfeld eingeben.
     \item Darunter befinden sich nebeneinander zwei Buttons. Einer zum lokalen Speichern und einer zum globalen Vorschlagen. 
-    Beim Klick auf einen der beiden Buttons wird die jeweilige Aktion ausgeführt. Der Text wird danach aus dem Textfeld gelöscht.
+    Beim Klick auf einen der beiden Buttons wird die jeweilige Aktion ausgeführt. War die Aktion erfolgreich, wird die Eingabe 
+    aus dem Textfeld gelöscht. Der Screen zeigt in jedem Fall eine Meldung zum Erfolg bez. Misserfolg der Aktion an.
     \item Darunter werden für dieses Kartenobjekt bereits existierende globale Aliasse angezeigt.
 \end{itemize}
