--- a/Kapitel/02_App/04_AddAlias/Klassen/IAddAliasController/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/IAddAliasController/main.tex
@@ -62,4 +62,5 @@ List<String>, Liste der globalen Aliasse.
 Implementiert IAddAliasController.
 \paragraph*{Beschreibung}
 Der AddAliasController stellt Methoden bereit um einen Alias bez. Alias-Vorschlag hinzuzufügen. 
-Außerdem stellt er existierende Aliasse bereit.
+Außerdem stellt er existierende Aliasse bereit.\\
+Seine Daten bezieht er von der Model-Klasse IAddAliasDataProvider.
