--- a/Kapitel/02_App/04_AddAlias/Klassen/IAliasDataProvider/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/IAliasDataProvider/main.tex
@@ -3,7 +3,7 @@
 Interface.
 \paragraph*{Beschreibung}
 Der IAliasDataProvider ist eine Schnittstelle, die eine Fassade des Models ist. 
-Dahinter verbirgt sie die ganze Funktionalität zum Lesen, Modifizieren, Vorschlagen und Löschen von Aliassen.
+Dahinter verbirgt sie die gesamte Funktionalität zum Lesen, Modifizieren, Vorschlagen und Löschen von Aliassen.
 
 \subsubsection*{\texttt{+ addLocalAlias(mapId : int, alias : String)}}%$$$M
 \paragraph*{Beschreibung}
