--- a/Kapitel/02_App/04_AddAlias/Klassen/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/main.tex
@@ -3,4 +3,5 @@
 \inprelmod{AddAliasScreen}
 \inprelmod{IAddAliasController}
 \inprelmod{IAliasDataProvider}
+\inprelmod{AliasDataProvider}
 \inprelmod{SuggestionFeedback}
