--- a/Kapitel/02_App/04_AddAlias/Klassen/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/main.tex
@@ -4,4 +4,5 @@
 \inprelmod{IAddAliasController}
 \inprelmod{IAliasDataProvider}
 \inprelmod{AliasDataProvider}
+\inprelmod{LocalAliasManager}
 \inprelmod{SuggestionFeedback}
