--- a/Kapitel/02_App/04_AddAlias/Klassen/AliasDataProvider/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/AliasDataProvider/main.tex
@@ -3,7 +3,7 @@
 Implementiert IAliasDataProvider.
 \paragraph*{Beschreibung}
 Der AliasDataProvider ist eine Fassade des Models. 
-Dahinter verbirgt sie die gesamte Funktionalität zum Lesen, Modifizieren, Vorschlagen und Löschen von Aliassen.\\
+Dahinter verbirgt er Funktionalität zum Lesen, Modifizieren, Vorschlagen und Löschen von Aliassen.\\
 Diese Klasse besitzt einen LocalAliasManager und einen GlobalAliasManager.
 
 \paragraph*{Methoden, die an den LocalAliasManager delegiert werden}
