--- a/Kapitel/02_App/04_AddAlias/Klassen/SuggestionFeedback/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/SuggestionFeedback/main.tex
@@ -9,5 +9,5 @@ mehrere Abstufungen zwischen zustimmen und ablehnen zu erlauben.
 \paragraph*{Werte}
 \begin{itemize}
     \item \textbf{POSITIVE}: Positives, vollkommen zustimmendes Feedback.
-    \item \textbf{NEGATIVE}: NEgatives, vollkommen ablehnendes Feedback.
+    \item \textbf{NEGATIVE}: Negatives, vollkommen ablehnendes Feedback.
 \end{itemize}
