--- a/Kapitel/02_App/04_AddAlias/Klassen/main.tex
+++ b/Kapitel/02_App/04_AddAlias/Klassen/main.tex
@@ -5,4 +5,5 @@
 \inprelmod{IAliasDataProvider}
 \inprelmod{AliasDataProvider}
 \inprelmod{LocalAliasManager}
+\inprelmod{GlobalAliasManager}
 \inprelmod{SuggestionFeedback}
