Added missing comma

--- a/Kapitel/02_App/07_Settings/Klassen/SettingsScreen/main.tex
+++ b/Kapitel/02_App/07_Settings/Klassen/SettingsScreen/main.tex
@@ -10,7 +10,7 @@ Der SettingsScreen besitzt einen ISettingsController, der die Daten bereitstellt
 Der SettingsScreen zeigt folgende Einstellungs-Möglichkeiten untereinander an:
 \begin{itemize}
     \item Anmelde-Schaltfläche: Ist der Benutzer nicht angemeldet, wird angezeigt, dass er sich anmelden kann. 
-    Klickt der Benutzer auf diese Schaltfläche zeigt die App die Anmeldung an.\\
+    Klickt der Benutzer auf diese Schaltfläche, zeigt die App die Anmeldung an.\\
     Ist der Benutzer angemeldet, wird angezeigt, dass er angemeldet ist. Außerdem wird die UserId angezeigt. 
     Klickt er lange auf diese, wird die UserId in die Zwischenablage kopiert. 
     Es wird über einen \href{https://developer.android.com/guide/topics/ui/notifiers/toasts}{Toast} angezeigt, dass 
