Add javadoc for method 'getAuthorities_CollectionExtGrantedAuthority'
Add javadoc for method
'Kapitel/00_Backend/Models/Alias/
getAuthorities_CollectionExtGrantedAuthority'
in '/main.tex' (in the same above mentioned path).

--- a/Kapitel/00_Backend/Models/Alias/main.tex
+++ b/Kapitel/00_Backend/Models/Alias/main.tex
@@ -3,3 +3,4 @@
 \inprelmod{Beschreibung}
 \inprelmod{getName_String}
 \inprelmod{getID_int}
+\inpremod{getAuthorities_CollectionExtGrantedAuthority}
