Fix javadoc for method 'getID_int'
Fix javadoc for method
'Kapitel/00_Backend/Models/Alias/
getID_int' in '/main.tex'
(in the same above mentioned path)
and change return type to 'long'.

--- a/Kapitel/00_Backend/Models/Alias/getID_long/main.tex
+++ b/Kapitel/00_Backend/Models/Alias/getID_long/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{getID() : String}}%$$$M
+\paragraph{\texttt{getID() : long}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die ID zurück.
 \paragraph*{Beschreibung}
