--- a/Kapitel/00_Backend/Models/Alias/main.tex
+++ b/Kapitel/00_Backend/Models/Alias/main.tex
@@ -2,5 +2,5 @@
 
 \inprelmod{Beschreibung}
 \inprelmod{getName_String}
-\inprelmod{getID_int}
+\inprelmod{getID_long}
 \inpremod{getAuthorities_CollectionExtGrantedAuthority}
