Add javadoc for method 'getMapID_int'
Add javadoc for method
'Kapitel/00_Backend/Models/Alias/
getMapID_int' in '/main.tex'
(in the same above mentioned path).

--- a/Kapitel/00_Backend/Models/Alias/main.tex
+++ b/Kapitel/00_Backend/Models/Alias/main.tex
@@ -4,3 +4,4 @@
 \inprelmod{getName_String}
 \inprelmod{getID_long}
 \inpremod{getAuthorities_CollectionExtGrantedAuthority}
+\inprelmod{getMapID_int}
