--- a/Kapitel/00_Backend/Models/Alias/main.tex
+++ b/Kapitel/00_Backend/Models/Alias/main.tex
@@ -3,5 +3,5 @@
 \inprelmod{Beschreibung}
 \inprelmod{getName_String}
 \inprelmod{getID_long}
-\inpremod{getAuthorities_CollectionExtGrantedAuthority}
+\inprelmod{getAuthorities_CollectionExtGrantedAuthority}
 \inprelmod{getMapID_int}
